--- a/221122.html
+++ b/221122.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>images layout</title>
-    <link rel="stylesheet" href="image3.css">
+    <title>revision</title>
+    <link rel="stylesheet" href="221122.css">
 </head>
+
 <body>
     <section class="wrapper">
         <div class="image">
-             <img class="bg" src="forest1.jpg" alt="forest" >
-             <img class="sm" src="forest1.jpg" alt="forest" >
-
-            </div>
+            <img class="bg" src="forest1.jpg" alt="forest">
+            <img class="sm" src="forest1.jpg" alt="forest">
+        </div>
         <div class="image">
-            <img class="bg" src="forest2.jpg" alt="forest" >
-            <img class="sm" src="forest2.jpg" alt="forest" >
+            <img class="bg" src="forest2.jpg" alt="forest">
+            <img class="sm" src="forest2.jpg" alt="forest">
         </div>
         <div class="image">
             <img class="bg" src="forest3.jpg" alt="forest">
-            <img class="sm" src="forest3.jpg" alt="forest" >
+            <img class="sm" src="forest3.jpg" alt="forest">
         </div>
+
     </section>
-    
+
 </body>
+
 </html>
